# debunc

./: LICENSE  README.md
chrome-extension/: background.js  config.ts  index.html  manifest.json  package-lock.json  package.json  vite.config.ts
chrome-extension/scripts/: content-script.js
chrome-extension/src/: App.tsx  hooks.ts  index.css  socket.ts  types.ts
chrome-extension/src/Popup/: AuthProvider.tsx  ClaimList.tsx  Layout.tsx  LoadingSpinner.css  LoadingSpinner.tsx  MarkdownRenderer.tsx  Popup.tsx  PostPreview.tsx  SocketProvider.tsx  UnsupportedNotice.tsx
chrome-extension/src/Popup/Home/: ClaimList.tsx  Home.tsx  LoadingSpinner.tsx  NotConnected.tsx  PostPreview.tsx
chrome-extension/src/Popup/styles/: Popup.css
chrome-extension/src/assets/: Icon.tsx
server/: .gitignore  index.py  pyproject.toml
server/flaskr/: __init__.py  db.py
server/flaskr/lib/: check.py  extract.py  types.py
server/lib/: check.py
server/utils/: parser.py
