[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-server"
version = "0.1.0"
description = "A Flask HTTP server"
requires-python = ">=3.8"
dependencies = [
    "Flask",
    "flask_cors",
    "flask_limiter",
    "openai",
    "dotenv"
]

[project.scripts]
flask-server = "app:main"